# client

./: Dockerfile  README.md  main.py  pyproject.toml
grimoirebots_client/: __main__.py  client.py
