[tool.poetry]
name = "grimoirebots-client"
version = "0.1.0"
description = ""
authors = ["Sergio Merino Hernández <merinhunter94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
api-client = "^1.3"
configparser = "^5.3"
docker = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
