[tool.poetry]
name = "grimoirebots-client"
version = "0.1.0"
description = ""
authors = ["Sergio Merino Hernández <merinhunter94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
api-client = "~1.3"
configparser = "~7.1"
docker = "~7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
